Run tests in Helix

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -33,6 +33,7 @@ stages:
         ${{ if ne(variables['System.TeamProject'], 'public') }}:
           name: NetCoreInternal-Pool
           queue: buildpool.windows.10.amd64.vs2017
+      helixTargetQueue: Windows.10.Amd64.ClientRS5.VS2019.BT.Open
       strategy:
         matrix:
           ${{ if eq(variables['System.TeamProject'], 'public') }}:
@@ -100,6 +101,7 @@ stages:
         pool:
           name: NetCorePublic-Pool
           queue: BuildPool.Windows.10.Amd64.VS2019.Pre.Open
+        helixTargetQueue: Windows.10.Amd64.ClientRS5.VS2019.BT.Open
         strategy:
           matrix:
             Build_Debug:
@@ -130,6 +132,7 @@ stages:
         pool:
           name: NetCorePublic-Pool
           queue: BuildPool.Ubuntu.1604.Amd64.Open
+        helixTargetQueue: Ubuntu.1604.Amd64.Open
         strategy:
           matrix:
             Build_Debug:
@@ -146,6 +149,7 @@ stages:
         agentOs: Darwin
         pool:
           name: Hosted macOS
+        helixTargetQueue: OSX.1014.Amd64.Open
         strategy:
           matrix:
             Build_Debug:
