--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -16,7 +16,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <VersionPrefix>16.3.1</VersionPrefix>
-    <!-- <DotNetFinalVersionKind>release</DotNetFinalVersionKind> -->
+    <DotNetFinalVersionKind>release</DotNetFinalVersionKind>
     <AssemblyVersion>15.1.0.0</AssemblyVersion>
     <PreReleaseVersionLabel>servicing</PreReleaseVersionLabel>
     <DotNetUseShippingVersions>true</DotNetUseShippingVersions>
