--- a/src/redist/targets/GenerateLayout.targets
+++ b/src/redist/targets/GenerateLayout.targets
@@ -5,6 +5,13 @@
     <WriteLinesToFile File="$(OutputPath)/.toolsetversion"
                       Lines="$(GitCommitHash);$(Version);$(Rid)"
                       Overwrite="true" />
+    
+    <!-- The .version file in the final product will be the .NET Core SDK version.  But
+         for the layout we produce here, use the toolset information, so that we don't
+         just always use the stage 0 version. -->
+    <WriteLinesToFile File="$(OutputPath)/.version"
+                      Lines="$(GitCommitHash);$(Version);$(Rid)"
+                      Overwrite="true" />
   </Target>
 
   <Target Name="PublishRoslyn"
