--- a/src/redist/targets/OverlaySdkOnLKG.targets
+++ b/src/redist/targets/OverlaySdkOnLKG.targets
@@ -5,23 +5,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <OverlaySDK Include="$(_DotNetHiveRoot)/**/*" />
+      <OverlaySDK Include="$(_DotNetHiveRoot)/**/*" Exclude="$(_DotNetHiveRoot)sdk/**/*"/>
       <ToolsetToOverlay Include="$(OutputPath)/**/*" />
     </ItemGroup>
 
     <Copy SourceFiles="@(OverlaySDK)"
           DestinationFiles="@(OverlaySDK->'$(RedistLayoutPath)\%(RecursiveDir)%(Filename)%(Extension)')" />
 
-    <!-- This is a hack? to discover the SDK folder on which we will overlay the
-    toolset without having to duplicate the LKG SDK property between the global.json
-    and a property. -->
-    <ItemGroup>
-      <VersionFilePath Include="$(RedistLayoutPath)/sdk/*/.version" />
-      <SdkDirectoryPath Include="$([System.IO.Path]::GetDirectoryName('%(VersionFilePath.Identity)'))" />
-    </ItemGroup>
-
     <PropertyGroup>
-      <SdkOutputDirectory>@(SdkDirectoryPath)</SdkOutputDirectory>
+      <SdkOutputDirectory>$(RedistLayoutPath)/sdk/$(Version)</SdkOutputDirectory>
     </PropertyGroup>
 
     <Copy SourceFiles="@(ToolsetToOverlay)"
