Suppress packae icon error in package

--- a/src/Publish/Package/Microsoft.NET.Sdk.Publish.csproj
+++ b/src/Publish/Package/Microsoft.NET.Sdk.Publish.csproj
@@ -4,6 +4,9 @@
     <PublishRoot Condition="'$(PublishRoot)' == ''">$(RepoRoot)\src\Publish\</PublishRoot>
     <!-- The transform file is used by the publish process -->
     <NoWarn>NU5108</NoWarn>
+
+    <!-- Workaround until we switch to embedded package icons -->
+    <NoWarn>$(NoWarn);NU5048;NU5128</NoWarn>
   </PropertyGroup>
 
   <Import Project="$(RepositoryEngineeringDir)\Package.props" />
