--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -37,7 +37,7 @@
     <MicrosoftNetCompilersVersion>3.3.1-beta4-19462-11</MicrosoftNetCompilersVersion>
     <MicrosoftNETSdkVersion>3.1.100-preview1.19504.1</MicrosoftNETSdkVersion>
     <MicrosoftNETSdkRazorVersion>3.1.0-preview1.19502.3</MicrosoftNETSdkRazorVersion>
-    <MicrosoftNETSdkWebVersion>3.1.100-preview1.19503.3</MicrosoftNETSdkWebVersion>
+    <MicrosoftNETSdkWebVersion>3.0.100-rc2.19465.1</MicrosoftNETSdkWebVersion>
     <NuGetBuildTasksVersion>5.3.0-rtm.6192</NuGetBuildTasksVersion>
     <ILLinkTasksVersion>0.1.6-prerelease.19380.1</ILLinkTasksVersion>
     <MicrosoftNETCoreAppVersion>3.1.0-preview1.19504.2</MicrosoftNETCoreAppVersion>
