Include RuntimeIdentifierGraph.json in bootstrap
Avoids errors when building with the bootstrapped build like

```
src/MSBuild/MSBuild.csproj(0,0): error NU1007: The runtime.json specified in the project '/Users/vsts/agent/2.158.0/work/1/s/stage1/bin/bootstrap/netcoreapp2.1/MSBuild/RuntimeIdentifierGraph.json' could not be found.
```

--- a/eng/BootStrapMSBuild.targets
+++ b/eng/BootStrapMSBuild.targets
@@ -39,6 +39,8 @@
 
         <!-- NuGet.targets will be in the ResolvedRuntimeTargets ItemGroup -->
         <_NuGetRuntimeDependencies Include="%(RuntimeTargetsCopyLocalItems.Identity)" Condition="'@(RuntimeTargetsCopyLocalItems->Contains('NuGet.'))' == 'True'" />
+
+        <_NuGetRuntimeDependencies Include="$(DOTNET_INSTALL_DIR)\sdk\$(DotNetCliVersion)\RuntimeIdentifierGraph.json" />
     </ItemGroup>
   </Target>
 
