--- a/eng/Packages.props
+++ b/eng/Packages.props
@@ -1,8 +1,8 @@
 <Project>
 
   <PropertyGroup>
-      <MicrosoftNetCompilersVersion>3.3.1-beta4-19462-11</MicrosoftNetCompilersVersion>
-      <CompilerToolsVersion>3.3.1-beta4-19462-11</CompilerToolsVersion>
+      <MicrosoftNetCompilersVersion>3.4.0-beta2-19477-01</MicrosoftNetCompilersVersion>
+      <CompilerToolsVersion>$(MicrosoftNetCompilersVersion)</CompilerToolsVersion>
       <NuGetPackageVersion>5.3.0-rtm.6192</NuGetPackageVersion>
       <NuGetBuildTasksVersion Condition="'$(NuGetBuildTasksVersion)' == ''">$(NuGetPackageVersion)</NuGetBuildTasksVersion>
       <NuGetCommandsVersion Condition="'$(NuGetCommandsVersion)' == ''">$(NuGetPackageVersion)</NuGetCommandsVersion>
