--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -126,27 +126,10 @@ stages:
 
     - template: /eng/build.yml
       parameters:
-        agentOs: Ubuntu_14_04
-        pool:
-          name: Hosted Ubuntu 1604
-        strategy:
-          matrix:
-            Build_Debug:
-              _BuildConfig: Debug
-              _PublishType: none
-              _SignType: test
-            Build_Release:
-              _BuildConfig: Release
-              _PublishType: none
-              _SignType: test
-        variables:
-          _PREVIEW_VSTS_DOCKER_IMAGE: microsoft/dotnet-buildtools-prereqs:ubuntu-14.04-cross-0cd4667-20170319080304
-
-    - template: /eng/build.yml
-      parameters:
         agentOs: Ubuntu_16_04
         pool:
-          name: Hosted Ubuntu 1604
+          name: NetCorePublic-Pool
+          queue: BuildPool.Ubuntu.1604.Amd64.Open
         strategy:
           matrix:
             Build_Debug:
@@ -157,8 +140,6 @@ stages:
               _BuildConfig: Release
               _PublishType: none
               _SignType: test
-        variables:
-          _PREVIEW_VSTS_DOCKER_IMAGE: microsoft/dotnet-buildtools-prereqs:ubuntu-16.04-cross-e435274-20180628134544
 
     - template: /eng/build.yml
       parameters:
@@ -206,7 +187,8 @@ stages:
       parameters:
         agentOs: Linux_Perf_CI
         pool:
-          name: Hosted Ubuntu 1604
+          name: NetCorePublic-Pool
+          queue: BuildPool.Ubuntu.1604.Amd64.Open
         strategy:
           matrix:
             Build_Release:
