--- a/src/redist/targets/OverlaySdkOnLKG.targets
+++ b/src/redist/targets/OverlaySdkOnLKG.targets
@@ -4,16 +4,11 @@
       <RedistLayoutPath>$(BaseOutputPath)$(Configuration)\dotnet\</RedistLayoutPath>
     </PropertyGroup>
 
-    <!-- This is a hack? to discover the stage 0 SDK version without having to duplicate the LKG SDK property between the global.json
+    <!-- Get stage 0 SDK version without having to duplicate the LKG SDK property between the global.json
     and a property. -->
-    <ItemGroup>
-      <Stage0VersionFilePath Include="$(_DotNetHiveRoot)/sdk/*/.version" />
-      <Stage0SdkDirectoryPath Include="$([System.IO.Path]::GetDirectoryName('%(Stage0VersionFilePath.Identity)'))" />
-      <Stage0SdkVersion Include="$([System.IO.Path]::GetFileName('%(Stage0SdkDirectoryPath.Identity)'))" />
-    </ItemGroup>
-    <PropertyGroup>
-      <Stage0SdkVersion>@(Stage0SdkVersion)</Stage0SdkVersion>
-    </PropertyGroup>
+    <Exec Command="$(DotnetTool) --version" ConsoleToMsbuild="true">
+      <Output TaskParameter="ConsoleOutput" PropertyName="Stage0SdkVersion"/>
+    </Exec>
 
     <ItemGroup>
       <OverlaySDK Include="$(_DotNetHiveRoot)/**/*" Exclude="$(_DotNetHiveRoot)sdk/**/*"/>
